demo app completed

--- a/backend/.env
+++ b/backend/.env
@@ -19,5 +19,5 @@ REFRESH_TOKEN_SECRET=supersecret_refresh_key_change_me
 REFRESH_TOKEN_EXPIRES_IN=7d
 
 # SuperAdmin
-SUPER_ADMIN_EMAIL=admin@smarthr.com
-SUPER_ADMIN_PASSWORD=changeMe123!
+SUPER_ADMIN_EMAIL=admin@gmail.com
+SUPER_ADMIN_PASSWORD=Vaibhav@22
